Include file path in Syntax error messages
When using ES6 modules it was not possible to identify which module
an error originates from.

This PR changes the error message to also include the file path using
the file:line:column format, and updates the source context printing for
unhandled exceptions to use the correct file.

Co-authored-by: Marko Fabo <mfabo@inf.u-szeged.hu>
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai dbatyai@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -112,6 +112,7 @@ LIT_MAGIC_STRING_SHIFT = "shift"
 LIT_MAGIC_STRING_SLICE = "slice"
 LIT_MAGIC_STRING_SPLIT = "split"
 LIT_MAGIC_STRING_VALUE = "value"
+LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
 LIT_MAGIC_STRING_NUMBER_UL = "Number"
 LIT_MAGIC_STRING_OBJECT_UL = "Object"
@@ -247,6 +248,7 @@ LIT_MAGIC_STRING_SET_MINUTES_UL = "setMinutes"
 LIT_MAGIC_STRING_SET_SECONDS_UL = "setSeconds"
 LIT_MAGIC_STRING_SET_UTC_DATE_UL = "setUTCDate"
 LIT_MAGIC_STRING_STARTS_WITH = "startsWith"
+LIT_MAGIC_STRING_RESOURCE_ANON = "<anonymous>"
 LIT_MAGIC_STRING_ARRAY_BUFFER_UL = "ArrayBuffer"
 LIT_MAGIC_STRING_SYNTAX_ERROR_UL = "SyntaxError"
 LIT_MAGIC_STRING_UINT16_ARRAY_UL = "Uint16Array"
