Math.sign and Math.trunc
JerryScript-DCO-1.0-Signed-off-by: Örkényi Virág orkvi@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -83,6 +83,7 @@ LIT_MAGIC_STRING_NEXT = "next"
 LIT_MAGIC_STRING_PUSH = "push"
 LIT_MAGIC_STRING_RACE = "race"
 LIT_MAGIC_STRING_SEAL = "seal"
+LIT_MAGIC_STRING_SIGN = "sign"
 LIT_MAGIC_STRING_SIZE = "size"
 LIT_MAGIC_STRING_SOME = "some"
 LIT_MAGIC_STRING_SORT = "sort"
@@ -111,6 +112,7 @@ LIT_MAGIC_STRING_ROUND = "round"
 LIT_MAGIC_STRING_SHIFT = "shift"
 LIT_MAGIC_STRING_SLICE = "slice"
 LIT_MAGIC_STRING_SPLIT = "split"
+LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
