Update URLs in GitHub Pages
Project is now under https://github.com/jerryscript-project and
https://jerryscript.net . Update hardcoded URLs to use HTTPS, both
for JerryScript and IoT.js. Make non-hardcoded URLs use Jekyll's
`relative_url` filter to avoid mixed content errors on GH Pages.

JerryScript-DCO-1.0-Signed-off-by: Akos Kiss akiss@inf.u-szeged.hu

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,4 @@
 # Site settings
 title: JerryScript Engine
-#email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  JerryScript is a very lightweight JavaScript engine with capability to run on microcontrollers with less than 8KB of RAM.
+description: JerryScript is a very lightweight JavaScript engine with capability to run on microcontrollers with less than 8KB of RAM.
 # baseurl: "/jerryscript" # the subpath of your site, e.g. /blog/
-# url: "http://samsung.github.io" # the base hostname & protocol for your site
-#twitter_username: jekyllrb
-#github_username:  samsung
-
-# Build settings
-highlighter: rouge
-
-markdown: kramdown
-kramdown:
-  input: GFM
