Add copyWithin and slice function to TypedArray
The algorithm's are based on ECMA-262 v6, 22.2.3.5 and 22.2.3.23

Co-authored-by: Tibor Dusnoki tdusnoki@inf.u-szeged.hu
JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -237,6 +237,7 @@ LIT_MAGIC_STRING_UINT8_ARRAY_UL = "Uint8Array"
 LIT_MAGIC_STRING_BYTE_LENGTH_UL = "byteLength"
 LIT_MAGIC_STRING_BYTE_OFFSET_UL = "byteOffset"
 LIT_MAGIC_STRING_CHAR_CODE_AT_UL = "charCodeAt"
+LIT_MAGIC_STRING_COPY_WITHIN = "copyWithin"
 LIT_MAGIC_STRING_ENUMERABLE = "enumerable"
 LIT_MAGIC_STRING_GET_FLOAT_32_UL = "getFloat32"
 LIT_MAGIC_STRING_GET_FLOAT_64_UL = "getFloat64"
