--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -154,6 +154,7 @@ LIT_MAGIC_STRING_TO_JSON_UL = "toJSON"
 LIT_MAGIC_STRING_VALUES = "values"
 LIT_MAGIC_STRING_BOOLEAN_UL = "Boolean"
 LIT_MAGIC_STRING_PROMISE_UL = "Promise"
+LIT_MAGIC_STRING_REFLECT_UL = "Reflect"
 LIT_MAGIC_STRING_SQRT1_2_U = "SQRT1_2"
 LIT_MAGIC_STRING_SYMBOL_LEFT_PAREN_UL = "Symbol("
 LIT_MAGIC_STRING_SYMBOL_DOT_UL = "Symbol."
