Implemented Number object routines (#2972)
Implemented Number.isNaN & Number.isFinite &
Number.isSafeInteger & Number.isInteger & Number.EPSILON.

JerryScript-DCO-1.0-Signed-off-by: Virag Orkenyi orkvi@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -209,6 +209,7 @@ LIT_MAGIC_STRING_NEGATIVE_INFINITY_UL = "-Infinity"
 LIT_MAGIC_STRING_ARGUMENTS_UL = "Arguments"
 LIT_MAGIC_STRING_EVAL_ERROR_UL = "EvalError"
 LIT_MAGIC_STRING_INT8_ARRAY_UL = "Int8Array"
+LIT_MAGIC_STRING_IS_INTEGER = "isInteger"
 LIT_MAGIC_STRING_MAX_VALUE_U = "MAX_VALUE"
 LIT_MAGIC_STRING_MIN_VALUE_U = "MIN_VALUE"
 LIT_MAGIC_STRING_TYPE_ERROR_UL = "TypeError"
@@ -287,6 +288,7 @@ LIT_MAGIC_STRING_TO_TIME_STRING_UL = "toTimeString"
 LIT_MAGIC_STRING_GET_UTC_MINUTES_UL = "getUTCMinutes"
 LIT_MAGIC_STRING_GET_UTC_SECONDS_UL = "getUTCSeconds"
 LIT_MAGIC_STRING_IS_PROTOTYPE_OF_UL = "isPrototypeOf"
+LIT_MAGIC_STRING_IS_SAFE_INTEGER = "isSafeInteger"
 LIT_MAGIC_STRING_LOCALE_COMPARE_UL = "localeCompare"
 LIT_MAGIC_STRING_SET_UTC_MINUTES_UL = "setUTCMinutes"
 LIT_MAGIC_STRING_SET_UTC_SECONDS_UL = "setUTCSeconds"
