Refactor RegExp builtin
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai dbatyai@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -27,7 +27,6 @@ LIT_MAGIC_STRING_ASTERIX_CHAR = "*"
 LIT_MAGIC_STRING_SPACE_CHAR = " "
 LIT_MAGIC_STRING_RIGHT_PAREN = ")"
 LIT_MAGIC_STRING_COMMA_CHAR = ","
-LIT_MAGIC_STRING_SLASH_CHAR = "/"
 LIT_MAGIC_STRING_COLON_CHAR = ":"
 LIT_MAGIC_STRING_E_U = "E"
 LIT_MAGIC_STRING_LEFT_SQUARE_CHAR = "["
@@ -102,6 +101,7 @@ LIT_MAGIC_STRING_CATCH = "catch"
 LIT_MAGIC_STRING_CLEAR = "clear"
 LIT_MAGIC_STRING_EVERY = "every"
 LIT_MAGIC_STRING_FALSE = "false"
+LIT_MAGIC_STRING_FLAGS = "flags"
 LIT_MAGIC_STRING_FLOOR = "floor"
 LIT_MAGIC_STRING_INDEX = "index"
 LIT_MAGIC_STRING_INPUT = "input"
