--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -285,6 +285,7 @@ LIT_MAGIC_STRING_SET_ITERATOR_UL = "Set Iterator"
 LIT_MAGIC_STRING_MAP_ITERATOR_UL = "Map Iterator"
 LIT_MAGIC_STRING_CONFIGURABLE = "configurable"
 LIT_MAGIC_STRING_FROM_CHAR_CODE_UL = "fromCharCode"
+LIT_MAGIC_STRING_FROM_CODE_POINT_UL = "fromCodePoint"
 LIT_MAGIC_STRING_IS_EXTENSIBLE = "isExtensible"
 LIT_MAGIC_STRING_TO_DATE_STRING_UL = "toDateString"
 LIT_MAGIC_STRING_TO_TIME_STRING_UL = "toTimeString"
