Implement String.prototype.codePointAt method
The algorithm is based on ECMA-262 v6, 21.1.3.3

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -261,6 +261,7 @@ LIT_MAGIC_STRING_SYNTAX_ERROR_UL = "SyntaxError"
 LIT_MAGIC_STRING_UINT16_ARRAY_UL = "Uint16Array"
 LIT_MAGIC_STRING_UINT32_ARRAY_UL = "Uint32Array"
 LIT_MAGIC_STRING_CONSTRUCTOR = "constructor"
+LIT_MAGIC_STRING_CODE_POINT_AT = "codePointAt"
 LIT_MAGIC_STRING_GET_FULL_YEAR_UL = "getFullYear"
 LIT_MAGIC_STRING_GET_UTC_HOURS_UL = "getUTCHours"
 LIT_MAGIC_STRING_GET_UTC_MONTH_UL = "getUTCMonth"
