--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -181,6 +181,8 @@ LIT_MAGIC_STRING_SPECIES = "species"
 LIT_MAGIC_STRING_TO_FIXED_UL = "toFixed"
 LIT_MAGIC_STRING_UNSHIFT = "unshift"
 LIT_MAGIC_STRING_VALUE_OF_UL = "valueOf"
+LIT_MAGIC_STRING_WEAKMAP_UL = "WeakMap"
+LIT_MAGIC_STRING_WEAKSET_UL = "WeakSet"
 LIT_MAGIC_STRING_EPSILON_U = "EPSILON"
 LIT_MAGIC_STRING_DATAVIEW_UL = "DataView"
 LIT_MAGIC_STRING_FUNCTION_UL = "Function"
