Add iterator close support for array destructuring
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -144,6 +144,7 @@ LIT_MAGIC_STRING_RANDOM = "random"
 LIT_MAGIC_STRING_REDUCE = "reduce"
 LIT_MAGIC_STRING_REJECT = "reject"
 LIT_MAGIC_STRING_REPEAT = "repeat"
+LIT_MAGIC_STRING_RETURN = "return"
 LIT_MAGIC_STRING_SEARCH = "search"
 LIT_MAGIC_STRING_SOURCE = "source"
 LIT_MAGIC_STRING_SPLICE = "splice"
