Implement tagged template literals
Missing features: snapshot support

JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -54,6 +54,7 @@ LIT_MAGIC_STRING_MIN = "min"
 LIT_MAGIC_STRING_NOW = "now"
 LIT_MAGIC_STRING_POP = "pop"
 LIT_MAGIC_STRING_POW = "pow"
+LIT_MAGIC_STRING_RAW = "raw"
 LIT_MAGIC_STRING_SET = "set"
 LIT_MAGIC_STRING_SIN = "sin"
 LIT_MAGIC_STRING_TAN = "tan"
