Add handling for RegExp unicode and sticky flags
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai dbatyai@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -149,6 +149,7 @@ LIT_MAGIC_STRING_SEARCH = "search"
 LIT_MAGIC_STRING_SOURCE = "source"
 LIT_MAGIC_STRING_SPLICE = "splice"
 LIT_MAGIC_STRING_STRING = "string"
+LIT_MAGIC_STRING_STICKY = "sticky"
 LIT_MAGIC_STRING_SYMBOL = "symbol"
 LIT_MAGIC_STRING_SUBSTR = "substr"
 LIT_MAGIC_STRING_ENTRIES = "entries"
@@ -180,6 +181,7 @@ LIT_MAGIC_STRING_SET_INT8_UL = "setInt8"
 LIT_MAGIC_STRING_SET_YEAR_UL = "setYear"
 LIT_MAGIC_STRING_SPECIES = "species"
 LIT_MAGIC_STRING_TO_FIXED_UL = "toFixed"
+LIT_MAGIC_STRING_UNICODE = "unicode"
 LIT_MAGIC_STRING_UNSHIFT = "unshift"
 LIT_MAGIC_STRING_VALUE_OF_UL = "valueOf"
 LIT_MAGIC_STRING_WEAKMAP_UL = "WeakMap"
