Implement the core of the generator functions.
Some things are missing:
 - yield* support
 - generator definition in object literal
 - the hidden GeneratorFunction

JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -113,6 +113,7 @@ LIT_MAGIC_STRING_ROUND = "round"
 LIT_MAGIC_STRING_SHIFT = "shift"
 LIT_MAGIC_STRING_SLICE = "slice"
 LIT_MAGIC_STRING_SPLIT = "split"
+LIT_MAGIC_STRING_THROW = "throw"
 LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
@@ -226,6 +227,7 @@ LIT_MAGIC_STRING_ARGUMENTS = "arguments"
 LIT_MAGIC_STRING_DECODE_URI = "decodeURI"
 LIT_MAGIC_STRING_ENCODE_URI = "encodeURI"
 LIT_MAGIC_STRING_FIND_INDEX = "findIndex"
+LIT_MAGIC_STRING_GENERATOR_UL = "Generator"
 LIT_MAGIC_STRING_GET_UTC_DAY_UL = "getUTCDay"
 LIT_MAGIC_STRING_GET_UINT16_UL = "getUint16"
 LIT_MAGIC_STRING_GET_UINT32_UL = "getUint32"
