Implement new Reflect methods
Including: Reflect.get/Reflect.set/Reflect.has/Reflect.deleteProperty/Reflect.ownKeys/Reflect.construct
As for Reflect.construct it's missing the new_target support because ecma_op_function_construct doesn't support it yet. Other than that added handling for new_target.

JerryScript-DCO-1.0-Signed-off-by: Daniella Barsony bella@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -171,6 +171,7 @@ LIT_MAGIC_STRING_GET_YEAR_UL = "getYear"
 LIT_MAGIC_STRING_INDEX_OF_UL = "indexOf"
 LIT_MAGIC_STRING_IS_ARRAY_UL = "isArray"
 LIT_MAGIC_STRING_MESSAGE = "message"
+LIT_MAGIC_STRING_OWN_KEYS_UL = "ownKeys"
 LIT_MAGIC_STRING_REPLACE = "replace"
 LIT_MAGIC_STRING_RESOLVE = "resolve"
 LIT_MAGIC_STRING_REVERSE = "reverse"
@@ -214,6 +215,7 @@ LIT_MAGIC_STRING_UNESCAPE = "unescape"
 LIT_MAGIC_STRING_WRITABLE = "writable"
 LIT_MAGIC_STRING_NEGATIVE_INFINITY_UL = "-Infinity"
 LIT_MAGIC_STRING_ARGUMENTS_UL = "Arguments"
+LIT_MAGIC_STRING_CONSTRUCT = "construct"
 LIT_MAGIC_STRING_EVAL_ERROR_UL = "EvalError"
 LIT_MAGIC_STRING_INT8_ARRAY_UL = "Int8Array"
 LIT_MAGIC_STRING_IS_INTEGER = "isInteger"
@@ -307,6 +309,7 @@ LIT_MAGIC_STRING_TO_EXPONENTIAL_UL = "toExponential"
 LIT_MAGIC_STRING_ARRAY_ITERATOR_UL = "Array Iterator"
 LIT_MAGIC_STRING_REFERENCE_ERROR_UL = "ReferenceError"
 LIT_MAGIC_STRING_DEFINE_PROPERTY_UL = "defineProperty"
+LIT_MAGIC_STRING_DELETE_PROPERTY_UL = "deleteProperty"
 LIT_MAGIC_STRING_GET_PROTOTYPE_OF_UL = "getPrototypeOf"
 LIT_MAGIC_STRING_GET_UTC_FULL_YEAR_UL = "getUTCFullYear"
 LIT_MAGIC_STRING_HAS_OWN_PROPERTY_UL = "hasOwnProperty"
