Implement the core of Proxy object
 - Internal routines of the of the proxy object are unimplemented
 - For-in enumerate with proxy target is currently not supported

JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -93,6 +93,7 @@ LIT_MAGIC_STRING_TRIM = "trim"
 LIT_MAGIC_STRING_TRUE = "true"
 LIT_MAGIC_STRING_ARRAY_UL = "Array"
 LIT_MAGIC_STRING_ERROR_UL = "Error"
+LIT_MAGIC_STRING_PROXY_UL = "Proxy"
 LIT_MAGIC_STRING_LOG2E_U = "LOG2E"
 LIT_MAGIC_STRING_SQRT2_U = "SQRT2"
 LIT_MAGIC_STRING_APPLY = "apply"
@@ -108,6 +109,7 @@ LIT_MAGIC_STRING_INPUT = "input"
 LIT_MAGIC_STRING_IS_NAN = "isNaN"
 LIT_MAGIC_STRING_MATCH = "match"
 LIT_MAGIC_STRING_PARSE = "parse"
+LIT_MAGIC_STRING_PROXY = "proxy"
 LIT_MAGIC_STRING_ROUND = "round"
 LIT_MAGIC_STRING_SHIFT = "shift"
 LIT_MAGIC_STRING_SLICE = "slice"
@@ -144,6 +146,7 @@ LIT_MAGIC_STRING_RANDOM = "random"
 LIT_MAGIC_STRING_REDUCE = "reduce"
 LIT_MAGIC_STRING_REJECT = "reject"
 LIT_MAGIC_STRING_REPEAT = "repeat"
+LIT_MAGIC_STRING_REVOKE = "revoke"
 LIT_MAGIC_STRING_RETURN = "return"
 LIT_MAGIC_STRING_SEARCH = "search"
 LIT_MAGIC_STRING_SOURCE = "source"
@@ -233,6 +236,7 @@ LIT_MAGIC_STRING_GET_UINT32_UL = "getUint32"
 LIT_MAGIC_STRING_LASTINDEX_UL = "lastIndex"
 LIT_MAGIC_STRING_MULTILINE = "multiline"
 LIT_MAGIC_STRING_PROTOTYPE = "prototype"
+LIT_MAGIC_STRING_REVOCABLE = "revocable"
 LIT_MAGIC_STRING_STRINGIFY = "stringify"
 LIT_MAGIC_STRING_SET_UINT16_UL = "setUint16"
 LIT_MAGIC_STRING_SET_UINT32_UL = "setUint32"
