--- a/targets/zephyr/prj.conf
+++ b/targets/zephyr/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_BUILD_OUTPUT_BIN=y
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_NEWLIB_LIBC=y
-CONFIG_FLOAT=y
+CONFIG_FPU=y
 CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_CONSOLE_HANDLER=y
