Implement Object.prototype.__proto__ accessor property
We are using the already existing Object.getPrototypeOf and
Object.setProtoypeOf methods

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -240,6 +240,7 @@ LIT_MAGIC_STRING_MAX_VALUE_U = "MAX_VALUE"
 LIT_MAGIC_STRING_MIN_VALUE_U = "MIN_VALUE"
 LIT_MAGIC_STRING_TYPE_ERROR_UL = "TypeError"
 LIT_MAGIC_STRING_UNDEFINED_UL = "Undefined"
+LIT_MAGIC_STRING__PROTO__ = "__proto__"
 LIT_MAGIC_STRING_ARGUMENTS = "arguments"
 LIT_MAGIC_STRING_DECODE_URI = "decodeURI"
 LIT_MAGIC_STRING_ENCODE_URI = "encodeURI"
